--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/hunterraffety/webauth-i-challenge#readme",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.19.0",
     "knex": "^0.19.0",
