--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "helmet": "^3.19.0",
     "knex": "^0.19.0",
     "sqlite3": "^4.0.9"
